no more background repeat

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,9 @@ body,
 }
 body {
   background: var(--bg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   color: var(--text);
   font-family: var(--font-stack);
   -webkit-font-smoothing: antialiased;
